# trackonverter

./: .gitignore  LICENSE  README.md  TODO.md  build.py  icon.icns  pyproject.toml  trackonverter.spec
.github/workflows/: build.yml
src/: audio.py  config.py  ffmpeg.py  file.py  main.py  output.py  track_converter.py
src/converters/: aiff.py  base.py  mp3.py
