[project]
name = "trackonverter"
version = "2.0.1"
description = ""
authors = [
    {name = "triankl3",email = "25014845+triankl3@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mutagen (>=1.47.0,<2.0.0)",
    "rich (>=14.1.0,<15.0.0)",
]

[tool.poetry]
package-mode = false
packages = [{include = ".", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"