[project]
name = "trackonverter"
version = "2.0.0"
# description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Nikola Pesevic", email = "contact@nikolapesevic.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.trackonverter".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.trackonverter"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "trackonverter"

# company name to display in about app dialogs
company = "Trackonverter"

# copyright text to display in about app dialogs
copyright = "MIT License"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}